--- a/mainPage.css
+++ b/mainPage.css
@@ -17,22 +17,13 @@ p {
     border-color: #3c68b2;
 }
 
-.topnavbl {
+.topnav {
     background-color: #3c68b2;
     overflow: hidden;
+    position: relative;
 }
 
-.topnavbgn {
-    background-color: #066760;
-    overflow: hidden;
-}
-
-.topnavrd {
-    background-color: #bf3730;
-    overflow: hidden;
-}
-
-.topnavbl a {
+.topnav a {
     float: left;
     color: black;
     text-align: center;
@@ -42,35 +33,8 @@ p {
     font-weight: bold;
 }
 
-.topnavgn a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 14px 30px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnavrd a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 30px;
-    text-decoration: none;
-    font-size: 17px;
-}
-.topnavbl a:hover {
+.topnav a:hover {
     background-color: #2b5294;
-    color: white;
-}
-
-.topnavgn a:hover {
-    background-color: #066760;
-    color: white;
-}
-
-.topnavrd a:hover {
-    background-color: #bf3730;
     color: white;
 }
 
@@ -96,8 +60,9 @@ p {
 }
 
 .topnav-center {
-    display: block;
-    width: 60px;
-    height: 0px;
-    margin: auto;
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
